--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -14,11 +14,12 @@ $breakpoints: (
 	large: $large,
 );
 
+$gray: #666;
 $burgundy: #a96682;
 $blue-xlight: #d9e6ec;
 $brown: #2f241f;
 $brown-light: #5e3d2d;
 $brown-light: #775454;
 $brown-xlight: #c28774;
-$orange: #f46e42;
+$orange: #d83a07;
 $yellow: #ff0;
